--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "illuminate/console": "^9.37",
-        "illuminate/filesystem": "^9.37",
-        "illuminate/support": "^9.37",
-        "illuminate/validation": "^9.37",
-        "tomatophp/tomato-splade": "^1.0"
+        "illuminate/console": "^9.37|^10.0",
+        "illuminate/filesystem": "^9.37|^10.0",
+        "illuminate/support": "^9.37|^10.0",
+        "illuminate/validation": "^9.37|^10.0",
+        "protonemedia/laravel-splade": "^1.3.0"
     },
     "conflict": {
         "laravel/framework": "<9.37.0"
